# qwen3asr_cpu

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  NOTICE.md  README.md  build.bat  build_log.txt  e2e_stderr.txt  experience.md  test_long_upload.ps1  test_stream.py  test_stream_upload.sh
.github/workflows/: cmake-single-platform.yml
app/: qasr_cli.cc  qasr_cpu_bench.cc  qasr_server.cc
cmake/: QasrBlas.cmake  QasrOneDNN.cmake
docs/: 00-reference-analysis.md  01-sow.md  02-technical-architecture.md  03-design-spec.md  04-development-standard.md  05-ui-and-docker.md  06-realtime-best-practices.md  07-license-compliance.md  08-cuda-integration-plan.md  audit20260410-e2e.md  audit20260410.md  audit20260411-realtime-pipeline.md  audit20260411.md  enhancement.md  enhancement2.md
include/qasr/audio/: audio_convert.h  frontend.h
include/qasr/base/: http_server.h  json.h
include/qasr/cli/: options.h
include/qasr/core/: audio_types.h  inference_arena.h  inference_backend.h  state_machine.h  status.h  timestamp.h
include/qasr/inference/: aligner_client.h  aligner_types.h  decoder.h  encoder.h  streaming_policy.h
include/qasr/model/: tokenizer.h
include/qasr/protocol/: openai.h  vllm.h
include/qasr/runtime/: blas.h  config.h  engine.h  model_bridge.h  realtime_session.h  session_manager.h  task.h  task_queue.h
include/qasr/service/: realtime.h  server.h
include/qasr/storage/: safetensors_loader.h
include/qasr/subtitle/: subtitle_writer.h
src/audio/: audio_convert.cc  frontend.cc
src/backend/qwen_cpu/: qwen_asr.c  qwen_asr.h  qwen_asr_aligner.c  qwen_asr_audio.c  qwen_asr_decoder.c  qwen_asr_encoder.c  qwen_asr_kernels.c  qwen_asr_kernels.h  qwen_asr_kernels_avx.c  qwen_asr_kernels_generic.c  qwen_asr_kernels_impl.h  qwen_asr_kernels_neon.c  qwen_asr_onednn.c  qwen_asr_onednn.h  qwen_asr_perf.c  qwen_asr_perf.h  qwen_asr_safetensors.c  qwen_asr_safetensors.h  qwen_asr_stream.h  qwen_asr_tokenizer.c
src/base/: http_server.cc  json.cc
src/cli/: options.cc
src/core/: audio_types.cc  inference_arena.cc  state_machine.cc  status.cc  timestamp.cc
src/inference/: aligner_client.cc  aligner_types.cc  decoder.cc  encoder.cc  streaming_policy.cc
src/model/: tokenizer.cc
src/protocol/: openai.cc  vllm.cc
src/runtime/: blas.cc  config.cc  cpu_backend.cc  engine.cc  model_bridge.cc  realtime_session.cc  session_manager.cc  task.cc  task_queue.cc
src/service/: realtime.cc  server.cc
src/storage/: safetensors_loader.cc
src/subtitle/: subtitle_writer.cc
testfile/: README.md
tests/: aligner_client_test.cc  aligner_types_test.cc  audio_convert_test.cc  audio_frontend_test.cc  audio_types_test.cc  blas_test.cc  cli_options_test.cc  config_test.cc  decoder_test.cc  encoder_test.cc  engine_test.cc  http_server_test.cc  inference_arena_test.cc  inference_backend_test.cc  json_test.cc  model_bridge_test.cc  onednn_int8_test.cc  openai_test.cc  qwen_cpu_kernels_test.cc  realfile_audio_test.cc  realtime_session_test.cc  realtime_test.cc  safetensors_loader_test.cc  server_test.cc  session_manager_test.cc  silence_gap_test.cc  state_machine_test.cc  status_test.cc  streaming_policy_test.cc  subtitle_writer_test.cc  task_queue_test.cc  task_test.cc  test_main.cc  test_paths.h  test_registry.h  timestamp_test.cc  tokenizer_test.cc  ui_wav_stream_upload_test.js  vllm_test.cc
tools/: build_windows_openblas.cmd  build_windows_openblas.ps1  clean_build.sh  docker_linux_openblas.sh  docker_run_ui_linux.sh  forced_aligner.py  offline_testfile_benchmark.ps1  realtime_testfile_benchmark.ps1  run_benchmark.ps1
ui/: app.js  index.html  style.css  wav_stream_upload.js
